--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native": "0.69.5",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-masked-text": "^1.13.0",
-    "react-native-safe-area-context": "4.3.1"
+    "react-native-safe-area-context": "4.3.1",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
