--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.0",
     "expo": "~46.0.9",
@@ -17,7 +19,8 @@
     "react-native": "0.69.5",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-masked-text": "^1.13.0",
-    "react-native-safe-area-context": "4.3.1"
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
