--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "~15.4.0",
+    "@react-native-firebase/firestore": "^16.4.3",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
@@ -16,6 +18,8 @@
     "expo": "~46.0.9",
     "expo-image-picker": "~13.3.1",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.6.11",
+    "idb": "^7.1.1",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
