--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "first": "npm install & yarn install & yarn start -a",
-    "start": "expo start",
+    "start": "expo start -a",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
