--- a/package.json
+++ b/package.json
@@ -1,39 +1,55 @@
 {
-  "name": "acmeairlines",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "first": "npm install & yarn install & yarn start -a",
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^0.17.0",
-    "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-firebase/firestore": "^16.4.3",
-    "@react-navigation/bottom-tabs": "^6.4.0",
-    "@react-navigation/drawer": "^6.5.0",
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/stack": "^6.3.0",
-    "expo": "~46.0.9",
-    "expo-image-picker": "~13.3.1",
-    "expo-status-bar": "~1.4.0",
-    "firebase": "^9.6.11",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.6",
-    "react-native-gesture-handler": "~2.5.0",
-    "react-native-masked-text": "^1.13.0",
-    "react-native-picker-select": "^8.0.4",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9"
-  },
-  "private": true
+    "name": "acmeairlines",
+    "version": "1.0.0",
+    "main": "node_modules/expo/AppEntry.js",
+    "scripts": {
+        "first": "npm install & yarn install & yarn start -a",
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web",
+        "lint": "eslint ."
+    },
+    "dependencies": {
+        "@expo/vector-icons": "^13.0.0",
+        "@expo/webpack-config": "^0.17.0",
+        "@fortawesome/fontawesome-svg-core": "^6.2.1",
+        "@fortawesome/free-brands-svg-icons": "^6.2.1",
+        "@fortawesome/free-regular-svg-icons": "^6.2.1",
+        "@fortawesome/free-solid-svg-icons": "^6.2.1",
+        "@fortawesome/react-fontawesome": "^0.2.0",
+        "@fortawesome/react-native-fontawesome": "^0.3.0",
+        "@react-native-async-storage/async-storage": "~1.17.3",
+        "@react-native-firebase/firestore": "^16.4.3",
+        "@react-navigation/bottom-tabs": "^6.4.0",
+        "@react-navigation/drawer": "^6.5.0",
+        "@react-navigation/native": "^6.0.13",
+        "@react-navigation/stack": "^6.3.0",
+        "expo": "~46.0.9",
+        "expo-font": "~10.2.0",
+        "expo-image-picker": "~13.3.1",
+        "expo-status-bar": "~1.4.0",
+        "firebase": "^9.6.11",
+        "react": "18.0.0",
+        "react-dom": "18.0.0",
+        "react-native": "0.69.6",
+        "react-native-gesture-handler": "~2.5.0",
+        "react-native-masked-text": "^1.13.0",
+        "react-native-picker-select": "^8.0.4",
+        "react-native-safe-area-context": "4.3.1",
+        "react-native-screens": "~3.15.0",
+        "react-native-svg": "12.3.0",
+        "react-native-vector-icons": "^9.2.0",
+        "react-native-web": "~0.18.7"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.12.9",
+        "eslint": "^8.27.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "prettier": "^2.7.1"
+    },
+    "private": true
 }
