--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-masked-text": "^1.13.0",
+    "react-native-paper": "^4.12.5",
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
